--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
     @apply text-[14px] font-[700];
   }
   button {
-    @apply w-[221px] h-[62px] rounded-[5px];
+    @apply rounded-[5px];
   }
   p {
     @apply text-[14px] font-[400];
